--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -391,6 +391,107 @@
                     />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/box_border"
+                >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="20dp"
+                    android:id="@+id/Bank2"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:text="بانک:"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/BankName2"
+                    android:paddingRight="5dp"
+                    android:layout_toLeftOf="@+id/Bank2"
+                    android:textSize="20dp"
+                    android:text="سامان"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Karmozd2"
+                    android:text="کارمزد:"
+                    android:textSize="20dp"
+                    android:layout_below="@+id/Bank2"
+                    android:layout_alignParentRight="true"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/NDarsad2"
+                    android:paddingRight="5dp"
+                    android:text="20"
+                    android:textSize="20dp"
+                    android:layout_below="@+id/Bank2"
+                    android:layout_toLeftOf="@+id/Karmozd2"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="5dp"
+                    android:id="@+id/Darsad2"
+                    android:text="درصد"
+                    android:textSize="20dp"
+                    android:layout_below="@+id/Bank2"
+                    android:layout_toLeftOf="@+id/NDarsad2"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/NoeHesab2"
+                    android:text="نوع حساب:"
+                    android:textSize="20dp"
+                    android:layout_below="@+id/Karmozd2"
+                    android:layout_alignParentRight="true"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Goone2"
+                    android:paddingRight="5dp"
+                    android:text="سپرده کوتاه مدت"
+                    android:textSize="20dp"
+                    android:layout_below="@+id/Karmozd2"
+                    android:layout_toLeftOf="@+id/NoeHesab2"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Tozihat2"
+                    android:text="توضیحات:"
+                    android:textSize="20dp"
+                    android:layout_below="@+id/NoeHesab2"
+                    android:layout_alignParentRight="true"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Tozih2"
+                    android:paddingRight="5dp"
+                    android:text="..."
+                    android:textSize="20dp"
+                    android:layout_below="@+id/NoeHesab2"
+                    android:layout_toLeftOf="@+id/Tozihat2"/>
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="60dp"
+                    android:paddingLeft="-20dp"
+                    android:paddingTop="-15dp"
+                    android:id="@+id/imageView2"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:src="@drawable/logo_saman"
+                    />
+            </RelativeLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
